--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1582,8 +1582,8 @@ fieldset:disabled a.btn {
 
 .btn-success {
   color: #ffffff;
-  background-color: #5cc72a;
-  border-color: #5cc72a; }
+  background-color: #0000bf;
+  border-color: #0000bf; }
   .btn-success:hover {
     color: #ffffff;
     background-color: #4da723;
